--- a/config-single-server/src/main/resources/bootstrap.yml
+++ b/config-single-server/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
         git:
           uri: https://github.com/MalcolmFF/springboot-config-temp #配置文件所在仓库
           username: MalcolmFF #登录账号
-          password: aaaaaa #登录密码
+          password: 123456 #登录密码
           default-label: master #配置文件分支
           search-paths: config  #配置文件所在根目录
 
