--- a/eureka-center/src/main/resources/bootstrap.yml
+++ b/eureka-center/src/main/resources/bootstrap.yml
@@ -1,15 +1,15 @@
 spring:
   application:
-    name: kite-eureka-center
-  security:
+    name: eureka-center
+  security: # 启用 spring security，临时读取此配置文件（可改为读取自定义数据库的用户表）
     user:
       name: test  # 用户名
       password: 123456   # 密码
-#  cloud:
-#    inetutils: ## 网卡设置
-#      ignoredInterfaces:  ## 忽略的网卡
-#        - docker0
-#        - veth.*
-#        - VM.*
-#      preferredNetworks:  ## 优先的网段
-#        - 192.168
+  cloud:
+    inetutils: ## 网卡设置
+      ignoredInterfaces:  ## 忽略的网卡
+        - docker0
+        - veth.*
+        - VM.*
+      preferredNetworks:  ## 优先的网段
+        - 192.168
